Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-26047

QWindowsVistaStyle warning about non existing paint device engine

XMLWordPrintable

    • 929e934969c621d7c1773e4233c14d358de4d385 (4.8) b97d1e01c9c76a1ab87fc791dfb8c5708457286c (5.0)

      Resizing a column in a QTreeView with an image-item selected will result the following error:
      “QPainter::begin: Paint device returned engine == 0, type: 2”

      The attached example can be used to reproduce the issue with the following steps:

      • select an item with an image
      • resize the image-column so that the image is no longer visible
        -> the warning will be issued

        For Gerrit Dashboard: QTBUG-26047
        # Subject Branch Project Status CR V

            qtcomsupport Qt Support
            qtcomsupport Qt Support
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes